[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiblame"
description = "Convert a wikipedia article to a git repository"
version = "1.0.0"
authors = [
  { name="Jordi Burguet-Castell", email="jordi.burguet.castell@gmail.com" },
]
readme = "readme.md"
license = { file="license.md" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = ["mwclient"]

[project.urls]
"Homepage" = "https://gitlab.com/jordibc/wikiblame"

[project.scripts]
wikiblame = "wikiblame:main"

[project.optional-dependencies]
test = ["pytest>=6.0"]
